# flappy-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  pages.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  rng.rs
crates/term/: Cargo.toml
crates/term/src/: course.rs  headless.rs  input.rs  layout.rs  main.rs  scene.rs
crates/term/src/golden/: ready.txt
crates/term/tests/: headless.rs
crates/web/: Cargo.toml  index.html
crates/web/src/: main.rs
docs/: DESIGN.md  RELEASE.md
