[package]
name = "flappy-web"
version = "0.5.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
flappy-core = { path = "../core" }
wasm-bindgen = "0.2"
gloo-events = "0.3"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
] }

# crates/web は root workspace から exclude されているため独立 workspace とする。
[workspace]
